<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radialbg"
    tools:context="com.example.projectsinglescreenapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/header_viewgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:src="@drawable/banner2" />
            <ImageView
                android:id="@+id/header_triangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/triangle"
                android:layout_alignBottom="@id/header"/>
            <TextView
                android:id="@+id/review3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding"
                android:paddingLeft="@dimen/reviews_padding_large"
                android:paddingBottom="@dimen/reviews_padding"
                android:textColor="@color/colorTransBlack"
                android:textStyle="italic"
                android:gravity="left"
                android:layout_below="@id/header"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/review3" />
            <TextView
                android:id="@+id/review2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/reviews_padding_large"
                android:paddingBottom="@dimen/default_padding"
                android:textColor="@color/colorTransBlack"
                android:textStyle="italic"
                android:gravity="right"
                android:layout_below="@id/review3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/review2" />

            <View
                android:id="@+id/divider1"
                style="@style/divider"
                android:layout_below="@id/review2" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/info_viewgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding"
            android:layout_below="@id/header_viewgroup">
            <TextView
                android:id="@+id/info_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:text="@string/address_text"
                android:drawableLeft="@drawable/marker2"
                android:drawablePadding="8dp" />
            <TextView
                android:id="@+id/info_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_address"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:text="@string/phone_text"
                android:autoLink="phone"
                android:drawableLeft="@drawable/phone2"
                android:drawablePadding="8dp" />
            <TextView
                android:id="@+id/info_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_phone"
                android:paddingBottom="@dimen/default_padding"
                android:gravity="center_vertical"
                android:autoLink="web"
                android:text="@string/website_text"
                android:drawableLeft="@drawable/website"
                android:drawablePadding="8dp" />
            <TextView
                android:id="@+id/info_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_website"
                android:paddingBottom="8dp"
                android:gravity="center_vertical"
                android:text="@string/schedule_text"
                android:drawableLeft="@drawable/calendar2"
                android:drawablePadding="8dp" />

            <View
                android:id="@+id/divider2"
                style="@style/divider"
                android:layout_below="@id/info_schedule" />
            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_padding"
                android:gravity="center"
                android:layout_below="@id/divider2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/info_text" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
